policies/enforce-ecr-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-ecr-registry
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: allow-only-ecr
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - DaemonSet
      validate:
        message: "Only images from 263108255899.dkr.ecr.us-east-1.amazonaws.com are allowed."
        pattern:
          spec:
            containers:
              - image: "263108255899.dkr.ecr.us-east-1.amazonaws.com/*"
