policies/req-app-label.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-for-app-label
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Pods must have an 'app' label"
        pattern:
          metadata:
            labels:
              app: "?*"
