policies/restrict-image-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registry
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-image-registry
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from ECR are allowed."
        pattern:
          spec:
            containers:
              - image: "992382474961.dkr.ecr.us-east-1.amazonaws.com/*"
